--- a/EligibilityPOC.WebUI/EligibilityPOC.WebUI.csproj
+++ b/EligibilityPOC.WebUI/EligibilityPOC.WebUI.csproj
@@ -144,6 +144,12 @@
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EligibilityPOC.Domain\EligibilityPOC.Domain.csproj">
+      <Project>{4f41cb6a-51db-4777-b282-1741d3fbb5d0}</Project>
+      <Name>EligibilityPOC.Domain</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
