--- a/EligibilityPOC.WebUI/EligibilityPOC.WebUI.csproj
+++ b/EligibilityPOC.WebUI/EligibilityPOC.WebUI.csproj
@@ -120,7 +120,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Infrastructure\DependencyResolver.cs" />
+    <Compile Include="Infrastructure\NinjectDependencyResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
