--- a/EligibilityPOC.Domain/EligibilityPOC.Domain.csproj
+++ b/EligibilityPOC.Domain/EligibilityPOC.Domain.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Abstract\IProductEligibilityParamRepository.cs" />
     <Compile Include="Abstract\IProductDataRepository.cs" />
     <Compile Include="Concrete\EFDbContext.cs" />
+    <Compile Include="Concrete\EFProductDataRepository.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\ProductData.cs" />
     <Compile Include="Entities\ProductEligibilityParam.cs" />
