--- a/EligibilityPOC.WebUI/Web.config
+++ b/EligibilityPOC.WebUI/Web.config
@@ -41,6 +41,6 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="EFDbContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=EligibilityPOC;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <add name="EFDbContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=C:\Users\nenad\AppData\Local\Microsoft\Microsoft SQL Server Local DB\Instances\MSSQLLocalDB\EligibilityPOC.mdf;Initial Catalog=EligibilityPOC;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
