--- a/EligibilityPOC.Domain/EligibilityPOC.Domain.csproj
+++ b/EligibilityPOC.Domain/EligibilityPOC.Domain.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Abstract\IProductDataRepository.cs" />
     <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Concrete\EFProductDataRepository.cs" />
+    <Compile Include="Concrete\EFProductEligibilityParamRepository.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\ProductData.cs" />
     <Compile Include="Entities\ProductEligibilityParam.cs" />
