--- a/EligibilityPOC.Domain/EligibilityPOC.Domain.csproj
+++ b/EligibilityPOC.Domain/EligibilityPOC.Domain.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Concrete\EFProductDataRepository.cs" />
     <Compile Include="Concrete\EFProductEligibilityParamRepository.cs" />
     <Compile Include="Entities\EligibilityEntities\FormSubtypeEligibility.cs" />
+    <Compile Include="Entities\EligibilityEntities\MultipleItemsEligibility.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\ProductData.cs" />
     <Compile Include="Entities\ProductEligibilityParam.cs" />
