--- a/EligibilityPOC.Domain/EligibilityPOC.Domain.csproj
+++ b/EligibilityPOC.Domain/EligibilityPOC.Domain.csproj
@@ -53,6 +53,8 @@
     <Compile Include="Abstract\IEligibilityFactory.cs" />
     <Compile Include="Abstract\IProductEligibilityParamRepository.cs" />
     <Compile Include="Abstract\IProductDataRepository.cs" />
+    <Compile Include="Abstract\IProductParamToEligibilityMapper.cs" />
+    <Compile Include="Concrete\ActivatorProductParamToEligibilityMapper.cs" />
     <Compile Include="Concrete\CompositeEligibilityFactory.cs" />
     <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Concrete\EFProductDataRepository.cs" />
@@ -60,6 +62,8 @@
     <Compile Include="Entities\EligibilityEntities\FormSubtypeEligibility.cs" />
     <Compile Include="Entities\EligibilityEntities\MultipleItemsEligibility.cs" />
     <Compile Include="Entities\EligibilityEntities\NullEligibility.cs" />
+    <Compile Include="Entities\EligibilityEntities\SubscriberTypeEligibility.cs" />
+    <Compile Include="Entities\EligibilityEntities\TariffsEligibility.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\ProductData.cs" />
     <Compile Include="Entities\ProductEligibilityParam.cs" />
