--- a/EligibilityPOC.UnitTests/EligibilityPOC.UnitTests.csproj
+++ b/EligibilityPOC.UnitTests/EligibilityPOC.UnitTests.csproj
@@ -53,13 +53,16 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
     <Compile Include="CompositeEligibilityFactoryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ActivatorProductParamToEligibilityMapperTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EligibilityPOC.Domain\EligibilityPOC.Domain.csproj">
