Type: test chore
Product builder test class.
Register with UnitTests project file.

--- a/EligibilityPOC.UnitTests/EligibilityPOC.UnitTests.csproj
+++ b/EligibilityPOC.UnitTests/EligibilityPOC.UnitTests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="CompositeEligibilityFactoryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ActivatorProductParamToEligibilityMapperTest.cs" />
+    <Compile Include="ProductBuilderTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EligibilityPOC.Domain\EligibilityPOC.Domain.csproj">
