--- a/EligibilityPOC.Domain/EligibilityPOC.Domain.csproj
+++ b/EligibilityPOC.Domain/EligibilityPOC.Domain.csproj
@@ -55,11 +55,13 @@
     <Compile Include="Abstract\IProductEligibilityParamRepository.cs" />
     <Compile Include="Abstract\IProductDataRepository.cs" />
     <Compile Include="Abstract\IProductParamToEligibilityMapper.cs" />
+    <Compile Include="Abstract\IProductDirector.cs" />
     <Compile Include="Concrete\ActivatorProductParamToEligibilityMapper.cs" />
     <Compile Include="Concrete\CompositeEligibilityFactory.cs" />
     <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Concrete\EFProductDataRepository.cs" />
     <Compile Include="Concrete\EFProductEligibilityParamRepository.cs" />
+    <Compile Include="Concrete\EligibilityProductDirector.cs" />
     <Compile Include="Concrete\ProductBuilder.cs" />
     <Compile Include="Entities\EligibilityEntities\FormSubtypeEligibility.cs" />
     <Compile Include="Entities\EligibilityEntities\MultipleItemsEligibility.cs" />
